# tracker

./: docker-compose.yml  requirements.txt
bots/: Dockerfile  pyproject.toml
bots/src/: bot.py  celery_app.py  config.py  main.py  middleware.py  run.py
bots/src/api/: client.py  exc.py  redis_client.py  response_handler.py  schemas.py
bots/src/handlers/: routers.py  start.py
bots/src/handlers/auth/: login.py  registration.py
bots/src/handlers/tasks/: create_tasks.py  show_tasks.py  update_task.py
bots/src/keyboards/: auth.py  builders.py  start.py  tasks.py
bots/src/states/: auth_states.py  task_states.py
bots/src/tasks/: notify.py
task_service/: Dockerfile  pyproject.toml
task_service/src/: app.py  config.py  dependencies.py  permissions.py
task_service/src/api/: dependencies.py
task_service/src/api/routing/: api_for_bot.py
task_service/src/api/schemas/: task_schemas.py  users_schemas.py
task_service/src/application/dto/: groups_dto.py  task_dto.py  users_dto.py
task_service/src/application/service/: exceptions.py  factories.py  group.py  task.py  user.py
task_service/src/domain/entities/: __init__.py  tasks.py  users.py
task_service/src/domain/repositories/: exceptions.py  group_repository.py  task_repository.py  user_repository.py
task_service/src/infra/db/models/: tasks.py  users.py
task_service/src/infra/db/tables/: base.py  (+1 more)
task_service/src/interfaces/api/: dependencies.py  exc_handlers.py  responses.py
task_service/src/migration/: env.py
task_service/src/migration/versions/: 4af94624fa2d_init.py  88afde0e1f24_deleted_subtasks.py  be2341332f7c_init.py  e61872311a99_init.py  f82f20f171c0_add_tz.py
task_service/src/models/: tasks.py
task_service/src/models.py/: models.py
task_service/src/routing/: api_for_bot.py  groups_routs.py  task_routs.py  user_routs.py
task_service/src/schemas/: groups_schemas.py  task_schemas.py
task_service/src/service/: abstract.py  exceptions.py  factories.py  group_service.py  task_service.py  user_service.py
task_service/src/tasks/: email.py
task_service/src/tests/: conftest.py
task_service/src/tests/test_repo/: test_group_repo.py  test_task_repo.py  test_user_repo.py
task_service/src/tests/test_routing/: conftest.py  test_auth_routs.py  test_group_routs.py  test_user_api_routs.py
task_service/src/tests/test_services/: conftest.py  test_group_service.py  test_task_service.py  test_user_service.py
(+27 files in other folders)
